<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpaceExplorer</string>
    <string name="move">Déplacer</string>
    <string name="open">Ouvrir</string>
    <string name="action">Attaque</string>
    <string name="info">Info</string>
    <string name="cancel">Annuler</string>
    <string name="action_box_title">Action</string>
    <string name="end_turn">Fin de tour</string>

    <string name="title_activity_startup">Space Explorers Menu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nouvelle_partie">Nouvelle Partie</string>
    <string name="continue_btn_lbl">Continuer</string>

    <string name="title_activity_create_game">Création de partie</string>
    <string name="playercount_lbl">Nombre de joueurs</string>
    <string name="master_btn">M</string>
    <string name="choose_map_lbl">Carte</string>
    <string name="turn_duration_lbl">Durée Max d\'un tour</string>
    <string name="continue_master_lbl">Continuer MJ</string>
    <string name="attack_is_success">Succès</string>
    <string name="attack_is_failed">Echec</string>

    <string name="modal_plip_hidden_info">Information indisponible</string>

    <string name="pending_game_notif_title">Partie en Attente</string>
    <string name="pending_game_master_text">Maitre, les joueurs attendent vos actions</string>
    <string name="pending_game_player_text">A vous de jouer !</string>
</resources>
