<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="org.copains.spaceexplorer.StartupActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <Button
            android:text="@string/nouvelle_partie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newgameBtn"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="onNewGame" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continue_btn"
            android:text="@string/continue_btn_lbl"
            android:enabled="false"
            android:onClick="onContinue" />

        <Button
            android:text="@string/continue_master_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continue_master_btn"
            android:enabled="false"
            android:onClick="onContinueMaster" />

        <Button
            android:text="@string/master_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_master"
            android:onClick="onMaster" />

        <Button
            android:text="Reseau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_network_game"
            android:onClick="onStartNetworkGame" />
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
