<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="org.copains.spaceexplorer.gamemaster.activities.CreateGameActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <Button
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_gravity="bottom|center_horizontal|center"
        android:onClick="createMasterGame" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/playercount_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nbplayerslabel"
                android:gravity="center_vertical" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:layout_gravity="center_horizontal|center"
                android:id="@+id/nb_players_radiogrp_fld">

                <RadioButton
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioplayer_1"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton"
                    android:checked="true" />

                <RadioButton
                    android:text="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioplayer_2"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton" />

                <RadioButton
                    android:text="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioplayer_3"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton" />

                <RadioButton
                    android:text="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioplayer_4"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/choose_map_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/map_select_fld"
                android:entries="@array/map_list"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/turn_duration_lbl" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/turn_duration_fld"
                android:entries="@array/turn_duration" />
        </TableRow>
    </TableLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>
